2014-07-03  Roland Levillain  <roland@lrde.epita.fr>

	Remove mentions to `oldies' in the Milena reference guide.

	* doc/ref-guide.tex: Here.

2014-07-03  Roland Levillain  <roland@lrde.epita.fr>

	Disable some tests depending on Poppler for compatibility reasons.

	* tests/io/pdf/load.cc: Here.

2014-07-02  Roland Levillain  <roland@lrde.epita.fr>

	Add a NEWS file to Milena.

	* NEWS: New.

2014-06-27  Roland Levillain  <roland@lrde.epita.fr>

	Fix the construction of mln::io::pdf::pdf_header.

	* mln/io/pdf/get_header.hh
	(mln::io::pdf::pdf_header::pdf_header::metadata): Fix type.

2014-06-26  Roland Levillain  <roland@lrde.epita.fr>

	Regen Milena's Makefile bits in doc/.

	* doc/examples-outputs.mk,
	* doc/figures.mk,
	* doc/split-examples.mk,
	* doc/split-outputs.mk:
	Regen.

2014-06-26  Roland Levillain  <roland@lrde.epita.fr>

	Make Milena more compatible with BSD Make.

	* apps/bench/Makefile.am,
	* apps/morphers/Makefile.am,
	* doc/Makefile.am,
	* doc/gen-examples-outputs-mk,
	* doc/gen-figures-mk,
	* doc/gen-split-examples-mk,
	* doc/gen-split-outputs-mk:
	Do not use `$<' outside suffix rules.
	* apps/papers/levillain.09.ismm/Makefile.am: Likewise.
	Add explicit `$(srcdir)/' prefixes to prerequisites' paths.
	* milena/Makefile.am,
	* milena/tests/unit_test/Makefile.am:
	Adjust comments.

2014-06-25  Roland Levillain  <roland@lrde.epita.fr>

	Convert Milena to UTF-8.

	* mln/accu/shape/volume.hh,
	* mln/core/concept/point_site.hh,
	* mln/morpho/watershed/flooding.hh,
	* mln/topo/skeleton/breadth_first_thinning.hh,
	* mln/topo/skeleton/priority_driven_thinning.hh:
	Here.
	* tests/core/image/complex_image.cc,
	* tests/core/image/complex_image.hh,
	* tests/core/site_set/p_complex.cc,
	* tests/make/attachment.cc,
	* tests/make/detachment.cc,
	* tests/morpho/complex_image_morpho.cc,
	* tests/topo/complex.cc,
	* tests/topo/is_facet.cc,
	* apps/morphers/iz.cc:
	Replace extended characters to convert to plain ASCII.