@@ -108,8 +108,9 @@ image.
    \li \ref mln::win
 
    \section copyright Copyright and License.
-   Copyright (C) 2007, 2008, 2009, 2010, 2011 EPITA Research and
-   Development (LRDE)
+
+   Copyright (C) 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014 EPITA
+   Research and Development (LRDE).
 
    This documentation is part of Olena.
 
